Added Iterative Solutions to Recursive Solutions.
Iterative solutions are more straightforward and prevents stack overflow. It is also highly preferred for Embedded Systems.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,6 @@ add_executable(Algorithm_Hub MergeSort.cpp
         "Binary Tree.cpp"
         QuickSort.cpp
         "Pixel Algorithm.cpp"
-        "Hash Tables.cpp")
+        "Hash Tables.cpp"
+        "Graph Algorithms.cpp"
+        "Dynamic Programming.cpp")
