Added some algorithms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,26 @@ add_executable(Algorithm_Hub MergeSort.cpp
         "Pixel Algorithm.cpp"
         "Hash Tables.cpp"
         "Graph Algorithms.cpp"
-        "Dynamic Programming.cpp")
+        "Dynamic Programming.cpp"
+        "Binary Search.cpp"
+        "Binary Insertion.cpp"
+        "Binary Tree Check Symmetry.cpp"
+        "Find Median Problem.cpp"
+        "Apartment Problem- Hard/Brute Force.cpp"
+        Test/Test.cpp
+        "List of 75 problems/Merge Words Alternatively.cpp"
+        "List of 75 problems/Greatest Common Divisor of Strings.cpp"
+        "List of 75 problems/Kids With the Greatest Number of Candies.cpp"
+        "List of 75 problems/Can Place Flowers.cpp"
+        "List of 75 problems/Reverse Words in a String.cpp"
+        "List of 75 problems/Product of Array Except Self.cpp"
+        "List of 75 problems/Increasing Triplet Subsequence.cpp"
+        "List of 75 problems/String Compression.cpp"
+        "List of 75 problems/Move Zeroes.cpp"
+        "List of 75 problems/SubSequence.cpp"
+        "List of 75 problems/Container With Most Water.cpp"
+        "List of 75 problems/Max Number of K-Sum Pairs.cpp"
+        "List of 75 problems/Maximum Average Subarray I.cpp"
+        "List of 75 problems/Maximum Number of Vowels in a Substring of Given Length.cpp"
+        "List of 75 problems/Max Consecutive Ones III.cpp"
+)
