Added new Algorithms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,4 +32,33 @@ add_executable(Algorithm_Hub MergeSort.cpp
         "List of 75 problems/Maximum Average Subarray I.cpp"
         "List of 75 problems/Maximum Number of Vowels in a Substring of Given Length.cpp"
         "List of 75 problems/Max Consecutive Ones III.cpp"
+        "List of 75 problems/Longest Subarray of 1's After Deleting One Element.cpp"
+        "List of 75 problems/Find Pivot Index.cpp"
+        "List of 75 problems/Determine if Two Strings Are Close.cpp"
+        "List of 75 problems/Equal Row and Column Pairs.cpp"
+        "List of 75 problems/Removing Stars from a String.cpp"
+        "List of 75 problems/Asteroids Problem.cpp"
+        "List of 75 problems/Decode String.cpp"
+        "List of 75 problems/Evaluate Reverse Polish Notation.cpp"
+        "List of 75 problems/Number of Recent Calls.cpp"
+        "List of 75 problems/Dota2 Senate.cpp"
+        "List of 75 problems/Delete the Middle Node of a Linked List.cpp"
+        "List of 75 problems/Odd Even Linked List.cpp"
+        "List of 75 problems/Reverse Linked List.cpp"
+        "List of 75 problems/Maximum Twin Sum of a Linked List.cpp"
+        "List of 75 problems/Longest Palindromic Substring.cpp"
+        "List of 75 problems/Longest Valid Parentheses.cpp"
+        "List of 75 problems/Continuous Subarray Sum.cpp"
+        "Sliding Window/DNA Sequence.cpp"
+        "Sliding Window/Longest Substring with Atleast K Repeating Characters.cpp"
+        "NeetCode 150/Duplicate Values.cpp"
+        "NeetCode 150/Valid Anagram.cpp"
+        "NeetCode 150/Two-Integer Sum.cpp"
+        "NeetCode 150/Anagram Groups.cpp"
+        "NeetCode 150/Top K Elements in List.cpp"
+        "NeetCode 150/String Encode and Decode.cpp"
+        "NeetCode 150/Valid Sudoku.cpp"
+        "NeetCode 150/Longest Consecutive Sequence.cpp"
+        "NeetCode 150/Product of Array Except Self.cpp"
+        "NeetCode 150/Two Integer Sum II.cpp"
 )
